--- a/arkanoid.html
+++ b/arkanoid.html
@@ -118,7 +118,7 @@
         function drawBall() {
             ctx.beginPath();
             ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
-            ctx.fillStyle = "#0095DD";
+            ctx.fillStyle = "#66FCF1";
             ctx.fill();
             ctx.closePath();
         }
@@ -126,7 +126,7 @@
         function drawPaddle() {
             ctx.beginPath();
             ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
-            ctx.fillStyle = "#0095DD";
+            ctx.fillStyle = "#C5C6C7";
             ctx.fill();
             ctx.closePath();
         }
@@ -141,7 +141,7 @@
                         bricks[c][r].y = brickY;
                         ctx.beginPath();
                         ctx.rect(brickX, brickY, brickWidth, brickHeight);
-                        ctx.fillStyle = "#0095DD";
+                        ctx.fillStyle = "#45A29E";
                         ctx.fill();
                         ctx.closePath();
                     }
@@ -151,18 +151,20 @@
 
         function drawScore() {
             ctx.font = "16px Arial";
-            ctx.fillStyle = "#0095DD";
+            ctx.fillStyle = "#66FCF1";
             ctx.fillText("Score: " + score, 8, 20);
         }
 
         function drawLives() {
             ctx.font = "16px Arial";
-            ctx.fillStyle = "#0095DD";
+            ctx.fillStyle = "#66FCF1";
             ctx.fillText("Lives: " + lives, canvas.width - 65, 20);
         }
 
         function draw() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = "#0B0C10";
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
             drawBricks();
             drawBall();
             drawPaddle();
