Add more info to home page

--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Web Games Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Web Games Home</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <a href="arkanoid.html">Arkanoid</a>
+	<h1>Web Games Home</h1>
+	<p>Available games:
+		<ul>
+			<li><a href="arkanoid.html">Arkanoid</a></li>
+		</ul>
+	</p>
 </body>
 
 </html>
