--- a/arkanoid.html
+++ b/arkanoid.html
@@ -65,6 +65,7 @@
         document.addEventListener("keydown", keyDownHandler, false);
         document.addEventListener("keyup", keyUpHandler, false);
         document.addEventListener("mousemove", mouseMoveHandler, false);
+        document.addEventListener("touchmove", touchMoveHandler, false);
 
         function keyDownHandler(e) {
             if (e.key == "Right" || e.key == "ArrowRight") {
@@ -93,6 +94,10 @@
                     paddleX = canvas.width - paddleWidth;
                 }
             }
+        }
+
+        function touchMoveHandler(e) {
+            mouseMoveHandler(e);
         }
 
         function detectBrickCollision() {
