--- a/arkanoid.html
+++ b/arkanoid.html
@@ -100,6 +100,7 @@
         }
 
         function touchMoveHandler(e) {
+            e.preventDefault();
             mouseMoveHandler(e);
         }
 
